--- a/client/src/Components/Form/Components/Input/Input.scss
+++ b/client/src/Components/Form/Components/Input/Input.scss
@@ -1,15 +1,16 @@
-.form-input{
-    color: white;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 0.5px solid rgba(255,255,255,0.3);
-    background: linear-gradient(180deg, rgba(100,106,150,0.4) 0%,rgba(182,186,214,0.25)100%);
-    border-radius: 10px;
-    outline: none;
-    width: 290px;
-   font-size: 15px; 
+.form-input {
+  color: black;
+  padding: 10px 0 5px 0;
+  margin-bottom: 10px;
+  border: none;
+  border-bottom: 0.5px solid black;
+  outline: none;
+  width: 90%;
+
 }
-.form-input::placeholder{
-    color: white;
-    font-size: 15px;
+
+.error-message {
+    font-size: 12px;
+  color: red;
+  margin: 0;
 }
