--- a/client/src/Components/Form/Components/UserForm.scss
+++ b/client/src/Components/Form/Components/UserForm.scss
@@ -1,41 +1,45 @@
-.form-title {
-  color: white;
-  text-transform: uppercase;
-}
-.form-wrapper {
-  position: absolute;
-  top: 5%;
-  background-color: black;
-  border: 0.5px solid rgba(255, 255, 255, 0.3);
-  box-shadow: 0 50px 100px rgba(0, 0, 0, 0.25);
-  backdrop-filter: blur(5px);
-  border-radius: 6px;
-  padding: 20px;
-  width: 320px;
-  text-align: center;
+.form-container {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(152, 152, 152, 0.85);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.error-message {
-  color: red;
-  font-weight: bold;
-  margin-top: 0;
-}
-.submit-btn {
-  font-weight: bold;
-  font-size: 16px;
-  text-transform: uppercase;
-  width: 140px;
-  height: 35px;
-  color: #fafafa;
-  background: #007ab5;
-  border: none;
-  border-radius: 5px;
-  outline: none;
-  margin: 6px;
-  cursor: pointer;
-  letter-spacing: 3px;
-}
-.close-icon{
-  color: #fff;
-  cursor: pointer;
+.form-wrapper {
+  position: relative;
+  width: 400px;
+  padding: 20px;
+  background-color: #fff;
+  border: 0.5px solid rgba(255, 255, 255, 0.3);
+  border-radius: 18px;
+  box-shadow: 0 50px 100px rgba(0, 0, 0, 0.25);
+  box-sizing: border-box;
+  text-align: center;
+  gap: 20px;
+  .form-title {
+    font-size: 28px;
+    font-weight: 400;
+    color: black;
+  }
+  .close-icon {
+    position: absolute;
+    color: black;
+    top: 12px;
+    right: 12px;
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+  }
+
+  .confirm-btn {
+    border-radius: 15px;
+    margin-top: 10px;
+  }
 }
