--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f5f5f7;
+  overflow-y: scroll;
 }
 * {
   box-sizing: border-box;
