--- a/client/src/Components/Cards/Cards/Cards.scss
+++ b/client/src/Components/Cards/Cards/Cards.scss
@@ -15,7 +15,8 @@
   justify-content: center;
   gap: 36px;
   .image-item {
-    width: 320px;
-    height: 240px;
+    max-width: 330px;
+    width: 100%;
+    height: 100%;
   }
 }
