--- a/client/src/Components/Cards/Card/Card.scss
+++ b/client/src/Components/Cards/Card/Card.scss
@@ -1,4 +1,5 @@
 .card-wrapper {
+  position: relative;
   background-color: #fff;
   border-radius: 18px;
   display: flex;
@@ -9,9 +10,30 @@
   transition: all 0.3s cubic-bezier(0, 0, 0.5, 1);
   cursor: pointer;
 
+  .read-more-hidden {
+    position: absolute;
+    cursor: pointer;
+    border: none;
+    text-align: center;
+    padding: 12px;
+    width: 200px;
+    bottom: 150px;
+    left: 50%;
+    border-radius: 20px;
+    // background-color: #67a4e2;
+    background-color: #e8e8ed;
+    transform: translate(-50%);
+    transition: 0.6s;
+    font-size: 18px;
+    opacity: 0;
+  }
   &:hover {
     transform: scale3d(1.01, 1.01, 1.01);
     box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.16);
+
+    .read-more-hidden {
+      opacity: 1;
+    }
   }
   .title-wrapp {
     display: flex;
