--- a/client/src/Components/Modal/DescriptionModal/DescriptionModal.scss
+++ b/client/src/Components/Modal/DescriptionModal/DescriptionModal.scss
@@ -1,3 +1,38 @@
-.desc-modal-wrapp {
+.total-description-modal-wrapper {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
 
+.description-modal-wrapp {
+  width: 800px;
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 20px;
+
+  .title {
+    margin: 0;
+  }
+  .description-image {
+    max-width: 300px;
+    width: 100%;
+    height: 100%;
+  }
+  .flex-wrapp {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  .description{
+    max-width: 435px;
+  }
 }
