--- a/client/src/Components/CartItems/CartItems.scss
+++ b/client/src/Components/CartItems/CartItems.scss
@@ -6,17 +6,38 @@
     font-weight: 400;
     font-size: 20px;
   }
-  .top-wrapper {
+  .head-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 20px;
   }
   .title {
     font-size: 25px;
   }
-}
+  .total-price {
+    font-size: 24px;
+    font-weight: 600;
+    color: #0071e3;
 
+  }
+  .total-price-wrapp {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+
+  }
+  .price-color {
+    color: black;
+    font-weight: 500;
+  }
+}
+.main-content {
+  display: flex;
+  justify-content: space-between;
+}
 .cart-items-wrapper {
+  position: relative;
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -52,6 +73,9 @@
   }
 
   .close-icon_wrapper {
+    position: absolute;
+    right: 0;
+    top: 0;
     background: rgb(228, 228, 228);
     border-radius: 50%;
     color: #6e6e73;
