--- a/client/src/Components/Form/Components/UserForm.scss
+++ b/client/src/Components/Form/Components/UserForm.scss
@@ -60,8 +60,9 @@
     color: #fff;
     padding: 10px;
   }
-}
 
-.error-message {
-  color: red;
+  .error-message {
+    color: #bf4800;
+    margin-top: 10px;
+  }
 }
