--- a/client/src/Components/Form/Components/Input/Input.scss
+++ b/client/src/Components/Form/Components/Input/Input.scss
@@ -1,16 +1,16 @@
-.form-input {
-  color: black;
-  padding: 10px 0 5px 0;
-  margin-bottom: 10px;
-  border: none;
-  border-bottom: 0.5px solid black;
-  outline: none;
-  width: 90%;
-
+.form-input_wrapper {
+  .form-input {
+    color: black;
+    padding: 10px 0 5px 10px;
+    margin-bottom: 10px;
+    border: none;
+    border-bottom: 0.5px solid black;
+    outline: none;
+    width: 90%;
+  }
 }
-
 .error-message {
-    font-size: 12px;
-  color: red;
+  font-size: 12px;
+  color: #bf4800;
   margin: 0;
 }
