total price added to local

--- a/client/src/Components/CartItems/CartItems.scss
+++ b/client/src/Components/CartItems/CartItems.scss
@@ -15,17 +15,19 @@
   .title {
     font-size: 25px;
   }
+  .price {
+    min-width: 50px;
+    // flex-shrink: 0;
+  }
   .total-price {
     font-size: 24px;
     font-weight: 600;
     color: #0071e3;
-
   }
   .total-price-wrapp {
     display: flex;
     align-items: center;
     gap: 50px;
-
   }
   .price-color {
     color: black;
@@ -55,6 +57,7 @@
   .img-wrapper {
     display: flex;
     justify-content: center;
+    padding: 15px 0;
   }
   .cart-images {
     max-width: 200px;
@@ -117,6 +120,17 @@
     font-size: 23px;
   }
 }
-.quantity-btn-wrapp{
+
+.quantity-btn-wrapp {
   display: flex;
+  align-items: center;
+  gap: 2px;
+  .quantity {
+    min-width: 10px;
+    text-align: center;
+  }
+  .quantity-btn {
+    cursor: pointer;
+    font-size: 20px;
+  }
 }
