--- a/client/src/Components/CartItems/CartItems.scss
+++ b/client/src/Components/CartItems/CartItems.scss
@@ -5,6 +5,8 @@
     cursor: pointer;
     font-weight: 400;
     font-size: 20px;
+    font-family: SF Pro Text, SF Pro Icons, AOS Icons, Helvetica Neue, Helvetica,
+      Arial, sans-serif;
   }
   .head-wrapper {
     display: flex;
@@ -45,7 +47,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   row-gap: 20px;
   .item-title {
-    font-size: 26px;
+    font-size: 18px;
     font-weight: 400;
     margin: 0;
   }
@@ -73,6 +75,15 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 20px;
+
+    .remove {
+      font-size: 15px;
+      font-weight: 400;
+      font-family: SF Pro Text, SF Pro Icons, AOS Icons, Helvetica Neue,
+        Helvetica, Arial, sans-serif;
+      color: #0071e3;
+      cursor: pointer;
+    }
   }
 
   .close-icon_wrapper {
