--- a/client/src/Components/CartItems/CartItems.scss
+++ b/client/src/Components/CartItems/CartItems.scss
@@ -7,6 +7,9 @@
     font-size: 20px;
     font-family: SF Pro Text, SF Pro Icons, AOS Icons, Helvetica Neue, Helvetica,
       Arial, sans-serif;
+    display: flex;
+    align-items: center;
+    gap: 2px;
   }
   .head-wrapper {
     display: flex;
@@ -34,6 +37,7 @@
   .price-color {
     color: black;
     font-weight: 500;
+    padding-left: 6px;
   }
 }
 .main-content {
