--- a/client/src/Components/FavouriteItems/favourite.scss
+++ b/client/src/Components/FavouriteItems/favourite.scss
@@ -11,11 +11,19 @@
     letter-spacing: 2px;
   }
 }
-.favourite-wrapper {
-  padding-top: 100px;
-  max-width: 1000px;
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  row-gap: 20px;
+.top-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.back {
+  color: #0071e3;
+  cursor: pointer;
+  font-weight: 400;
+  font-size: 20px;
+  font-family: SF Pro Text, SF Pro Icons, AOS Icons, Helvetica Neue, Helvetica,
+    Arial, sans-serif;
+  display: flex;
+  align-items: center;
+  gap: 2px;
 }
