search modal added

--- a/client/src/Components/Header/Header.scss
+++ b/client/src/Components/Header/Header.scss
@@ -33,7 +33,10 @@
     display: flex;
     align-items: center;
   }
-
+.search-icon-header{
+  margin-right: 35px;
+  cursor: pointer;
+}
   .red-icon {
     color: #bf4800;
     margin-right: 4px;
