--- a/client/src/Components/Modal/DescriptionModal/DescriptionModal.scss
+++ b/client/src/Components/Modal/DescriptionModal/DescriptionModal.scss
@@ -60,8 +60,7 @@
     font-size: 17px;
     line-height: 1.7;
     font-weight: 400;
-    font-family: SF Pro Text, SF Pro Icons, AOS Icons, Helvetica Neue, Helvetica,
-      Arial, sans-serif;
+    font-family: SF Pro Text, SF Pro Icons, AOS Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-weight: 600;
   }
   .desc-button {
