--- a/client/src/Components/Modal/SearchModal/search-modal.scss
+++ b/client/src/Components/Modal/SearchModal/search-modal.scss
@@ -10,7 +10,7 @@
 
   .search-modal-wrapp {
     position: relative;
-    height: 60vh;
+    min-height: 60vh;
     background: white;
     padding: 0 130px;
     z-index: 2;
