fixed fetchData in search

--- a/client/src/Components/Header/Header.scss
+++ b/client/src/Components/Header/Header.scss
@@ -2,7 +2,7 @@
   width: auto;
   display: flex;
   justify-content: space-between;
-  padding: 0 130px;
+  padding: 22px 130px;
   background-color: rgba(228, 228, 228, 0.9);
   position: fixed;
   z-index: 100;
