--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
 
   -webkit-font-smoothing: antialiased;
@@ -11,4 +10,12 @@ body {
 }
 * {
   box-sizing: border-box;
+}
+p,
+ul,
+li,
+h1,
+ol {
+  margin: 0;
+  padding: 0;
 }
