fixing search component bugs

--- a/client/src/Components/Modal/SearchModal/search-modal.scss
+++ b/client/src/Components/Modal/SearchModal/search-modal.scss
@@ -31,6 +31,10 @@
   .search-item {
     cursor: pointer;
   }
+  .search-icon {
+    width: 20px;
+    height: 20px;
+  }
   .search-item:not(:last-child) {
     margin-bottom: 7px;
   }
