--- a/client/src/Components/Header/Header.scss
+++ b/client/src/Components/Header/Header.scss
@@ -2,7 +2,7 @@
   width: auto;
   display: flex;
   justify-content: space-between;
-  padding: 22px 130px;
+  padding: 14px 130px;
   background-color: rgba(228, 228, 228, 0.9);
   position: fixed;
   z-index: 100;
@@ -10,7 +10,6 @@
   left: 0;
   right: 0;
 
-  
   .title-wrapp {
     cursor: pointer;
     display: flex;
@@ -33,10 +32,12 @@
     display: flex;
     align-items: center;
   }
-.search-icon-header{
-  margin-right: 35px;
-  cursor: pointer;
-}
+  .search-icon-header {
+    margin-right: 35px;
+    cursor: pointer;
+    width: 17px;
+    height: 17px;
+  }
   .red-icon {
     color: #bf4800;
     margin-right: 4px;
